--- a/week1/index.html
+++ b/week1/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+  
+
+    <p id="text">dit is tekst</p>
+
+    <h1 id="id01">bolle vader</h1>
+
+    <script src="app.js"></script>
 </body>
 </html>
